# bloom-cli

./: Cargo.toml  README.md  TODO.md
src/: main.rs
tests/: beefs  deadbeef  functional-test.bash  functional-test.rs
