[package]
name = "bloom-cli"
version = "0.1.2"
authors = ["John Baber-Lucero <gris@frundle.com>"]
edition = "2021"
description = "A naive implementation of a CLI bloom filter that stores views of files"
homepage = "https://github.com/jbaber/bloom-cli"
readme = "README.md"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"


[dependencies.xxhash-rust]
version = "0.8.5"
features = ["xxh32", "const_xxh32",]
